--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 html {
   color: #222;
-  font-size: 1em;
   line-height: 1.4;
+}
+
+body {
+  font-family: "Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif";
+
+  color: #333333;
 }
 
 /*
